<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:padding="20dp">

    <TextView
        android:id="@+id/textViewNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/nameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNameLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewNameLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewNameLabel" />

    <TextView
        android:id="@+id/textViewAgeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ageLabel"
        app:layout_constraintStart_toStartOf="@+id/textViewNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameLabel" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ageHint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAgeLabel"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toTopOf="@+id/textViewAgeLabel" />

    <TextView
        android:id="@+id/textViewFeelingQLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/feelingQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAgeLabel" />

    <Button
        android:id="@+id/buttonTellUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feelBtnLabel"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFeelImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewFeelImage" />

    <ImageView
        android:id="@+id/imageViewFeelImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFeelingQLabel"
        app:layout_constraintEnd_toStartOf="@+id/buttonTellUs"
        app:layout_constraintStart_toEndOf="@+id/textViewFeelingQLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewFeelingQLabel" />

    <TextView
        android:id="@+id/textViewMoodRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFeelImage"
        app:layout_constraintStart_toStartOf="@+id/imageViewFeelImage"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFeelImage" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btnSubmitLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMoodRating" />

</androidx.constraintlayout.widget.ConstraintLayout>