<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ProfileFragment" >

    <TextView
        android:id="@+id/textViewNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="20dp" />

    <TextView
android:id="@+id/textViewAgeLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="32dp"
android:text="@string/ageLabel"
app:layout_constraintStart_toStartOf="@+id/textViewNameLabel"
app:layout_constraintTop_toBottomOf="@+id/textViewNameLabel" />

    <TextView
android:id="@+id/textViewFeelingQLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="8dp"
android:layout_marginTop="64dp"
android:text="@string/feelingQuestion"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/textViewAgeLabel" />

    <ImageView
        android:id="@+id/imageViewFeelImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFeelingQLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewFeelingQLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewFeelingQLabel" />

<TextView
android:id="@+id/textViewMoodRating"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="8dp"
app:layout_constraintEnd_toEndOf="@+id/imageViewFeelImage"
app:layout_constraintStart_toStartOf="@+id/imageViewFeelImage"
app:layout_constraintTop_toBottomOf="@+id/imageViewFeelImage" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btnBackLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMoodRating" />

    <TextView
        android:id="@+id/textViewMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFeelImage"
        app:layout_constraintStart_toEndOf="@+id/imageViewFeelImage"
        app:layout_constraintTop_toTopOf="@+id/imageViewFeelImage" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNameLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewNameLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewNameLabel" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAgeLabel"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toTopOf="@+id/textViewAgeLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>
